PortfolioPackage/main/default/objects/Custom_Skill__c/Custom_Skill__c.object-meta.xml
<CustomObject>
    <label>Custom_Skill</label>
    <nameField>
        <label>Custom_Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom_Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>