PortfolioPackage/main/default/objects/Custom_Skill__c/fields/Skill_Number__c.field-meta.xml
<CustomField>
    <fullName>Skill_Number__c</fullName>
    <displayFormat>SKILL-{0000}</displayFormat>
    <label>Skill_Number</label>
    <type>AutoNumber</type>
</CustomField>